--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 /* .Main-content and nav bar */
 
 .parent {
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
